# mmu

./: .gitignore  CMakeLists.txt  readme.md
docs/: phase1_unified_memory_blueprint.md
examples/: llm_kv_prefill_decode.cpp
include/dsf_mmu/: mmu_api.h  mmu_config.h  mmu_types.h
src/: mmu_api.cpp
src/core/: block_directory.cpp  block_directory.h  block_manager.cpp  block_manager.h  context.cpp  context.h  page_table.cpp  page_table.h
src/internal/: mmu_test_api.h
tests/: readme.md  test_allocator_basic.cpp  test_api_contract.cpp  test_cascade_fork_and_free.cpp  test_cow_trigger.cpp  test_fork_shared_block.cpp  test_mapped_pointer.cpp  test_out_of_bounds.cpp  test_p0_metadata_skeleton.cpp  test_page_table_mapping.cpp  test_parallel_global_lock.cpp  test_sys_fork_zero_copy.cpp
